web ScoreBoard triche

--- a/web/contact.html
+++ b/web/contact.html
@@ -22,6 +22,7 @@
 			<li><a href="play.html">PLAY</a></li>
 			<li><a href="about.html">ABOUT</a></li>
 			<li><a href="contact.html">CONTACT</a></li>
+			<li><a href="score.html">SCOREBOARD</a></li>
 		</ul>
 		</nav>
 	<h2 id="contact" style="color:white"> <center>Le Groupe Impact vous présente 
