--- a/web/score.html
+++ b/web/score.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAMPAG@ME-Play</title>
+    <title>CAMPAG@ME-Scoreboard</title>
     <link rel="stylesheet" href="style.css">
 	
-    <img src="ressources/background.jpg" rel="stylesheet" style="width:100%;height:100%;">
+    <img src="ressources/background.jpg" rel="stylesheet" style="width:100%;height:55%;">
 </head>
 <body>
     
 
-    <center><div class="container-first">
-        <h1 style="font-size: 150%;">Désolé, cette page n'est pas encore disponible pour le moment...</h1> <br><br><br><br><br><br><br>
-		<img src="ressources/pasdejeu.gif" rel="stylesheet" style="width:70%;height:40%;;">
-    </div></center>
+    <div class="container-first">
+        <h1><span>Score</span><span>Board</span></h1> 
+    </div>
 	
     <img src="ressources/Logo.png" class="logo">
 	<nav>
@@ -27,6 +26,24 @@
 			<li><a href="score.html">SCOREBOARD</a></li>
 		</ul>
 		</nav>
+<center><table style="color: white; ">
+    <tr>
+        <td>Possition</td>
+        <td>UserName</td>
+        <td>Xp</td>
+        <td>XpPendu</td>
+        <td>XpPuissance4</td>
+        <td>XpMiniTanks</td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Krisboul</td>
+        <td>4300</td>
+        <td>4200</td>
+        <td>100</td>
+        <td>0</td>
+    </tr>
+</table></center>
 </h2>
 
 
