--- a/web/score.html
+++ b/web/score.html
@@ -37,16 +37,46 @@
     </tr>
     <tr>
         <td>1</td>
-        <td>Krisboul</td>
+        <td>krisboul</td>
         <td>4300</td>
         <td>4200</td>
         <td>100</td>
         <td>0</td>
     </tr>
+    <tr>
+        <td>2</td>
+        <td>tina</td>
+        <td>2700</td>
+        <td>2400</td>
+        <td>300</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>paul</td>
+        <td>2700</td>
+        <td>2400</td>
+        <td>300</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>amine</td>
+        <td>2700</td>
+        <td>2400</td>
+        <td>300</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>attilio</td>
+        <td>2700</td>
+        <td>2400</td>
+        <td>300</td>
+        <td>0</td>
+    </tr>
 </table></center>
 </h2>
-
-
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="app.js"></script>
