--- a/web/contact.html
+++ b/web/contact.html
@@ -27,8 +27,8 @@
 		</nav>
 	<h2 id="contact" style="color:white"> <center>Le Groupe Impact vous présente 
 	CAPAG@ME. <br></center>
-Nous vous présentons à travers ce cahier des charges le début de
-ce que sera notre projet de S2.<br>
+    
+<br>
 Impact est un jeune groupe constitué de 4 brillants élèves de deux
 classes différentes: Amine Mike El Maalouf, le chef, Paul Grangeon,
 le sociable, Attilio Leviels, l’original et Christina Lopes pour la
@@ -38,9 +38,8 @@ tout ayant l’envie de progresser ensemble, c’est tout naturellement
 que ce quatuor s’est formé. A vrai dire, ce groupe est novice dans le
 développement d’un projet, et particulièrement dans le développement
 d’un jeu vidéo. Mais ayant la fervente volonté de réaliser un travail
-de qualité, Impact est bien décidé à faire le nécessaire pour laisser,
-ne serait-ce, qu’une légére trace dans les esprits.<br>
-C’est de là que vient le nom, le désir d’impacter vos esprits! <br>
+de qualité, et de marqué vos esprits.<br>
+D'ailleurs, c’est de là que vient le nom, le désir d’impacter vos esprits! <br>
 Le nom de du projet CAPAG@ME est composé des initiales des
 membres d’Impact ainsi que de la nature même de ce projet à savoir
 un jeu vidéo. Le type de ce jeu vidéo a été défini par la diversité
