--- a/web/about.html
+++ b/web/about.html
@@ -26,7 +26,7 @@
 			<li><a href="score.html">SCOREBOARD</a></li>
 		</ul>
 		</nav>
-	<h2 id="contact" style="color:white"> <center>Pourquoi les mini-jeu ?</h2></center>
+	<h2 id="contact" style="color:white"> <center>Pourquoi les mini-jeux ?</h2></center>
 	<p>
 	Les mini-jeux sont des jeux vidéo simples, courts, sans trame scénaristique et possédant un objectif clair.<br>
 De par leur définition large, beaucoup de jeux peuvent se retrouver sous l’appellation mini-jeu. Les premiers jeux vidéo,
@@ -48,9 +48,32 @@ comme dans la série WarioWare (2003), en multijoueur local dans la série des M
 
 Le genre du mini-jeu est caractérisé par l’aspect convivial et amusant des jeux dans leur généralité ainsi que leur côté addictif.</p>
 
+<br><br><br><br><br></p>
+<h2 id="contact" style="color:white"> <center>Parce que c'est notre Projet</h2></center>
+	<p>
+		Pour les plus curieux, nous vous présentons une rapide explication des objectifs de notre projet et comment
+		avons nous fait pour le mener à bien.<br>
+		Premièrement, les applications et logiciels utilisés pour notre projet sont : Unity, Blender et Firebase.<br>
+
+		Unity est un logiciel très utilisé et connu dans le développement de jeux-vidéo. En ce qui concerne sa prise en main,
+		de nombreux tutoriels disponibles sur Youtube nous ont permis de connaître et maîtriser les bases de Unity.<br>
+
+		Blender est un logiciel spécialisé dans la modélisation 3D. Ce logiciel nous a permis de réalisé toute la partie design de notre jeu.
+		<br>
+
+		Et pour finir, Firbase, qui est une application permettant de pouvoir stocker et accéder aux données de nos
+		joueurs de manière totalement sécurisé.
+
+		<br>
+		La prise en main de c'est logiciel n'a pas été une chose évidente et même si on retrouve beaucoup de tutoriels très complet
+		sur Youtube, il a aussi fallu se pencher sur la documentation de ces derniers afin de pouvoir être totalement libre
+		de réaliser ce que l'on souhaitait.
+
+	</p>
+<br><br>
 <br><br><br><br><br>
 <br><br><br><br><br>
-<br><br><br><br><br>
+
 </h2>
 
 
